tests/fixtures/subdomains/valid/minimal/cue.mod/module.cue
module: "github.com/sw6n297mn8-maker/mesh-spec/tests/fixtures/subdomains/valid/minimal"
language: version: "v0.12.0"
