tests/fixtures/subdomains/invalid/duplicate-bc/cue.mod/module.cue
module: "github.com/sw6n297mn8-maker/mesh-spec/tests/fixtures/subdomains/invalid/duplicate-bc"
language: version: "v0.12.0"
